# fixafel

./: .gitignore  .pylintrc  app.py  pyproject.toml
src/: container.py
src/app/: __init__.py
src/app/public/: routes.py
src/app/public/templates/public/: index.html
src/application/: appliaction_service.py  application_command.py  application_response.py  application_service.py
src/application/use_cases/get_list_transactions/: get_list_transactions.py  get_list_transactions_command.py  get_list_transactions_response.py
src/application/use_cases/get_transaction/: get_transaction.py  get_transaction_command.py  get_transaction_response.py
src/application/use_cases/reinject_transactions/: reinject_transactions.py  reinject_transactions_command.py  reinject_transactions_response.py
src/domain/: transaction.py  trx_not_found_error.py  trx_repository.py
src/domain/core/: application_error.py  domain_entity.py
src/infrastructure/config/: config.sample.py
src/infrastructure/http/: base_controller.py  error_handler.py  transaction_controller.py  trx_controller.py
src/infrastructure/http/contracts/: base_request_contract.py  get_transactions_request_contract.py  reinject_transactions_request_contract.py
src/infrastructure/http/validator/: request_validator.py
src/infrastructure/logger/: logger_config.py  logger_formatter.py
src/infrastructure/persistence/: database_handler.py  database_parser.py
src/infrastructure/persistence/firestore/: firestore_handler.py  firestore_parser.py  firestore_repository.py
src/templates/: base.html
